# dummyxiao

./: README.md
ros2/: README.md
ros2/install/: local_setup.sh  setup.sh
ros2/install/dummyxiaox319_description/share/dummyxiaox319_description/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2/install/dummyxiaox319_description/share/dummyxiaox319_description/launch/: gazebo.launch.py
ros2/install/dummyxiaox319_description/share/dummyxiaox319_description/urdf/: dummy_ros2_control.xacro
ros2/install/dummyxiaox_moveit_config/share/dummyxiaox_moveit_config/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2/install/dummyxiaox_moveit_config/share/dummyxiaox_moveit_config/config/: dummy.ros2_control.xacro  dummy.urdf.xacro  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
ros2/log/: latest_build
ros2/src/dummyxiaox319_description/: package.xml  setup.cfg  setup.py
ros2/src/dummyxiaox319_description/config/: rviz.rviz
ros2/src/dummyxiaox319_description/launch/: display.launch.py
ros2/src/dummyxiaox319_description/urdf/: mydummy.urdf
ros2/src/dummyxiaox_interface/: CMakeLists.txt  package.xml
ros2/src/dummyxiaox_interface/srv/: InitUsb2Can.srv  ReadUsb2Can.srv  WriteUsb2Can.srv
ros2/src/dummyxiaox_moveit_config/: .setup_assistant  CMakeLists.txt
ros2/src/dummyxiaox_moveit_config/config/: dummy.srdf  initial_positions.yaml
ros2/src/dummyxiaox_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ros2/src/dummyxiaox_usb2can/: package.xml  setup.cfg  setup.py
ros2/src/dummyxiaox_usb2can/dummyxiaox_usb2can/: usb2can_node.py
ros2/src/dummyxiaox_usb2can/launch/: real_robot.launch.py  usb2can.launch.py
(+3 files in other folders)
